# sms-archive

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  README.md  THIRD_PARTY_NOTICES  about.toml  extract_pdf.py  requirements.txt  rust-toolchain.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml
config/: app_global_settings.json  app_ui_settings.example.json
crates/analytics/: Cargo.toml
crates/analytics/src/: aggregator.rs  emoji.rs  flow.rs  focus.rs  inside_jokes.rs  insights.rs  lib.rs  media.rs  orchestrator.rs  patterns.rs  rating.rs  responses.rs  scoring.rs  segmenter.rs  sentiment.rs  topics.rs  types.rs
crates/app/: Cargo.toml
crates/app/src/: analytics_tab.rs  main.rs  theming.rs  thumbnails.rs  vcard_fmt.rs
crates/assistant/: Cargo.toml
crates/assistant/src/: chat.rs  lib.rs  ollama.rs  tools.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/clip/: Cargo.toml
crates/clip/src/: encoder.rs  lib.rs  nsfw.rs  preprocessing.rs
crates/clip/tests/: local_models.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/datagen/: Cargo.toml
crates/datagen/src/: lib.rs
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial.sql  0002_ml.sql  0003_ml_meta.sql  0004_contacts.sql  0005_settings.sql  0006_extended_contacts.sql  0007_ocr_data.sql  0008_vision_analysis.sql  0009_message_direction.sql  0010_media_nsfw.sql  0011_media_embeddings.sql  0012_attachment_gps_cache.sql  0013_message_contact_name.sql  0014_analytics_tables.sql  0015_contacts_source.sql  0016_sentiment_and_jokes.sql  0017_fts_triggers.sql  0018_attachments_dedupe.sql
crates/db/src/: lib.rs
crates/errors/: Cargo.toml
crates/errors/src/: lib.rs
crates/ingest/: Cargo.toml
crates/ingest/src/: lib.rs
crates/ingest/tests/: ingest_integration.rs
crates/media/: Cargo.toml
crates/media/src/: keyframes.rs  lib.rs
crates/media/tests/: heic_ffmpeg.rs
crates/media/tests/fixtures/: tiny.heic
crates/media_process/: Cargo.toml
crates/media_process/src/: lib.rs
crates/ml/: Cargo.toml
crates/ml/src/: lib.rs
crates/perf/: Cargo.toml
crates/perf/benches/: boundary_detection.rs  ingest_throughput.rs
crates/perf/src/: lib.rs
crates/search/: Cargo.toml
crates/search/src/: lib.rs
crates/types/: Cargo.toml
crates/types/src/: lib.rs
docs/: ANALYTICS_BOOTSTRAP_new.md  ARCHITECTURE.md  BENCHMARKS.md  BOOTSTRAP.md  PRIVACY.md  RELEASE.md  SETUP.md  app_clip_processing_reference.md  app_main_reference.md  cli_media_process_reference.md  clip_reference.md  media_keyframes_reference.md  media_process_reference.md
docs/design/: ANALYTICS_BOOTSTRAP_new.md  BOOTSTRAP.md
ml/: README.md
scripts/: build-app.cmd  extract_pdf.py  package_release.ps1  setup_marqo_nsfw.py  setup_ml_models.py
