[package]
name = "sms-clip"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image = { workspace = true }
ndarray = { workspace = true }
ndarray-npy = "0.10.0"
ort = { workspace = true, features = ["ndarray"] }
safetensors = "0.4"
bytemuck = "1.16"
tracing = { workspace = true }
serde_json = { workspace = true }

sms-errors = { path = "../errors" }

# CUDA execution provider: only Windows and Linux have ort prebuilt cu12/cu13
# binaries; macOS has none, so the feature must not be requested there.
[target.'cfg(not(target_os = "macos"))'.dependencies]
ort = { workspace = true, features = ["cuda"] }

[dev-dependencies]
image = { workspace = true }

[features]
default = ["onnx"]
onnx = []
