[package]
name = "sms-datagen"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
rand = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

sms-errors = { path = "../errors" }

[dev-dependencies]
tempfile = { workspace = true }
