[package]
name = "sms-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
quick-xml = { workspace = true }
memchr = { workspace = true }
memmap2 = { workspace = true }
unicode-normalization = { workspace = true }
crossbeam-channel = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }

sms-types = { path = "../types" }
sms-errors = { path = "../errors" }
sms-db = { path = "../db" }
sms-config = { path = "../config" }
sms-media = { path = "../media" }

[dev-dependencies]
tempfile = { workspace = true }
