[package]
name = "sms-media-process"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
image = { workspace = true }
rayon = { workspace = true }
indicatif = { workspace = true }
tracing = { workspace = true }
rusqlite = { workspace = true }

sms-clip = { path = "../clip" }
sms-db = { path = "../db" }
sms-media = { path = "../media" }
sms-errors = { path = "../errors" }
sms-config = { path = "../config" }
